--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "edmine"
 version = "0.1.0"
-description = ""
+description = "A library of algorithms for reproducing Knowledge Tracing, Cognitive Diagnosis, and Exercise Recommendation models."
 authors = [
     { name = "ZhijieXiong", email = "18800118477@163.com" },
 ]
-readme = "README.md"
+readme = "README4PYPI.md"
 license = { text = "MIT License" }
 requires-python = ">=3.9"
 dependencies = [
