--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "edmine"
-version = "0.1.1"
+version = "0.1.2"
 description = "A library of algorithms for reproducing Knowledge Tracing, Cognitive Diagnosis, and Exercise Recommendation models."
 authors = [
     { name = "ZhijieXiong", email = "18800118477@163.com" },
@@ -20,7 +20,7 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/ZhijieXiong"
+Homepage = "https://zhijiexiong.github.io/sub-page/pyedmine/document/site/index.html"
 
 [tool.setuptools.packages.find]
 where = ["."]
