--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "edmine"
-version = "0.2.0"
-description = "A library of algorithms for reproducing Knowledge Tracing, Cognitive Diagnosis, and Exercise Recommendation models."
+version = "0.2.1"
+description = "A library of algorithms for reproducing Knowledge Tracing, Cognitive Diagnosis, Exercise Recommendation and Learning Path Recommendation models."
 authors = [
     { name = "ZhijieXiong", email = "18800118477@163.com" },
 ]
